@@ -24,6 +24,11 @@ sub test_body {
     my ($self) = @_;
 
     return <<'TEST_BODY';
+if ( exists $ENV{AUTOMATED_TESTING} ) {
+    print "1..0 # SKIP these tests during AUTOMATED_TESTING\n";
+    exit 0;
+}
+
 use Test::Pod::No404s;
 
 all_pod_files_ok();
