@@ -7,6 +7,11 @@ use warnings;
 # this test was generated with
 # Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Pod::No404s 0.005
 
+if ( exists $ENV{AUTOMATED_TESTING} ) {
+    print "1..0 # SKIP these tests during AUTOMATED_TESTING\n";
+    exit 0;
+}
+
 use Test::Pod::No404s;
 
 all_pod_files_ok();
